adicionado funcionalidades novas